--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,15 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
-    "bootstrap": "^5.3.2",
-    "i18next": "^23.8.2",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.10.0",
     "react-cookie": "^7.0.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.0",
-    "react-i18next": "^14.0.1",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.22.0",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
